2002-04-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Mention collectaddys in the whitelist FAQ.

2002-03-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: New entries:
	- "Can I post to a TMDA protected mailing list with a 'dated'
	address?"
	- "How do I prevent my auto-whitelist from being filled with
	'dated' addresses?"
	
2002-03-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Link to Mutt/VVV-NNTP instructions.

2002-03-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Add dated address config for the TIN
	newsreader.
	
2002-03-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-filter.ht: Document the instruction option to the
	ok,accept,deliver incoming action.

2002-02-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* index.ht (Links): Mention TMDA's local mail delivery agent
	capability up front.

	* config-pre.ht: Document how to make Exim add Return-Path to
	command pipe messages.

2002-02-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* features.ht (Links): Add Maildir and mbox delivery.

2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* features.ht (Links): Mention filtering language, local mail
	delivery ability, and -autocdb/-autodbm.  Change HMAC link.

	* resources.ht (TARGET): Link to the TMDA plugin for SquirrelMail.
	
	* config-server.ht (Links): Include 'preline' in dot-qmail
	instructions.
	
2002-02-22  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Docs and an example for new -autodbm flag on
	the 'from-file' and 'to-file' sources.

2002-02-21  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Move 'from*' sources to list of incoming and
	outgoing sources.

2002-02-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update link to bbdb-normalize-tmda-addresses.
	
	* features.ht (Links): Mention OpenBSD port.
